src/objects/Participant_Intern_Record__c.object
<CustomObject>
    <fields>
        <fullName>Afterschool_FY_Reading_Assessment__c</fullName>
        <label>Afterschool FY Reading Assessment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Improved</fullName>
                </value>
                <value>
                    <fullName>Maintained</fullName>
                </value>
                <value>
                    <fullName>Decreased</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Afterschool_Mid_Reading_Assessment__c</fullName>
        <label>Afterschool Mid Reading Assessment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Improved</fullName>
                </value>
                <value>
                    <fullName>Maintained</fullName>
                </value>
                <value>
                    <fullName>Decreased</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Americorps_Age_Group_Interns__c</fullName>
        <label>Americorps Age Group (Interns)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-12</fullName>
                </value>
                <value>
                    <fullName>13-18</fullName>
                </value>
                <value>
                    <fullName>19-30</fullName>
                </value>
                <value>
                    <fullName>31-46</fullName>
                </value>
                <value>
                    <fullName>47-64</fullName>
                </value>
                <value>
                    <fullName>65+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <label>Amount Paid</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apr_Days_Attended__c</fullName>
        <label>Apr Days Attended</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attend_Daily__c</fullName>
        <label>Attend Daily</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aug_Days_Attended__c</fullName>
        <label>Aug Days Attended</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Books_Read__c</fullName>
        <label>Books Read</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Enrolled__c</fullName>
        <label>Date Enrolled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dates_Not_Attending__c</fullName>
        <label>Dates Not Attending</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dec_Days_Attended__c</fullName>
        <label>Dec Days Attended</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dec_Value_Aug_Value__c</fullName>
        <formula>I_L_Dec_Value__c -  I_L_Aug_Value__c</formula>
        <label>Dec Value - Aug Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feb_Days_Attended__c</fullName>
        <label>Feb Days Attended</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_L_Aug_Color__c</fullName>
        <label>I.L. Aug Color</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DARK BLUE</fullName>
                </value>
                <value>
                    <fullName>LIGHT BLUE</fullName>
                </value>
                <value>
                    <fullName>GREEN</fullName>
                </value>
                <value>
                    <fullName>LIGHT GREEN</fullName>
                </value>
                <value>
                    <fullName>YELLOW</fullName>
                </value>
                <value>
                    <fullName>PINK</fullName>
                </value>
                <value>
                    <fullName>ORANGE</fullName>
                </value>
                <value>
                    <fullName>RED</fullName>
                </value>
                <value>
                    <fullName>PURPLE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_L_Aug_Value__c</fullName>
        <formula>CASE( 
TEXT( I_L_Aug__c ), 
&quot;BR&quot;,1, 
&quot;A&quot;, 2, 
&quot;B&quot;, 3, 
&quot;C&quot;, 4, 
&quot;D&quot;, 5, 
&quot;E&quot;, 6, 
&quot;F&quot;, 7, 
&quot;G&quot;, 8, 
&quot;H&quot;, 9, 
&quot;I&quot;,10, 
&quot;J&quot;,11, 
&quot;K&quot;,12, 
&quot;L&quot;,13, 
&quot;M&quot;,14, 
&quot;N&quot;,15, 
&quot;O&quot;,16, 
&quot;P&quot;,17, 
&quot;Q&quot;,18, 
&quot;R&quot;,19, 
&quot;S&quot;,20, 
&quot;T&quot;,21, 
&quot;U&quot;,22, 
&quot;V&quot;,23, 
&quot;W&quot;,24, 
&quot;X&quot;,25, 
&quot;Y&quot;,26, 
&quot;Z&quot;,27, 
&quot;Z+&quot;,28, 
null 
)</formula>
        <label>I.L. Aug Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>I_L_Aug__c</fullName>
        <label>I.L. Aug</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BR</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>J</fullName>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>Q</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
                <value>
                    <fullName>W</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>Z</fullName>
                </value>
                <value>
                    <fullName>Z+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_L_Dec_Color__c</fullName>
        <label>I.L. Dec Color</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DARK BLUE</fullName>
                </value>
                <value>
                    <fullName>LIGHT BLUE</fullName>
                </value>
                <value>
                    <fullName>GREEN</fullName>
                </value>
                <value>
                    <fullName>LIGHT GREEN</fullName>
                </value>
                <value>
                    <fullName>YELLOW</fullName>
                </value>
                <value>
                    <fullName>PINK</fullName>
                </value>
                <value>
                    <fullName>ORANGE</fullName>
                </value>
                <value>
                    <fullName>RED</fullName>
                </value>
                <value>
                    <fullName>PURPLE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_L_Dec_Value__c</fullName>
        <formula>CASE( 
TEXT( I_L_Dec__c ), 
&quot;BR&quot;,1, 
&quot;A&quot;, 2, 
&quot;B&quot;, 3, 
&quot;C&quot;, 4, 
&quot;D&quot;, 5, 
&quot;E&quot;, 6, 
&quot;F&quot;, 7, 
&quot;G&quot;, 8, 
&quot;H&quot;, 9, 
&quot;I&quot;,10, 
&quot;J&quot;,11, 
&quot;K&quot;,12, 
&quot;L&quot;,13, 
&quot;M&quot;,14, 
&quot;N&quot;,15, 
&quot;O&quot;,16, 
&quot;P&quot;,17, 
&quot;Q&quot;,18, 
&quot;R&quot;,19, 
&quot;S&quot;,20, 
&quot;T&quot;,21, 
&quot;U&quot;,22, 
&quot;V&quot;,23, 
&quot;W&quot;,24, 
&quot;X&quot;,25, 
&quot;Y&quot;,26, 
&quot;Z&quot;,27, 
&quot;Z+&quot;,28, 
null 
)</formula>
        <label>I.L. Dec Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>I_L_Dec__c</fullName>
        <label>I.L. Dec</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BR</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>J</fullName>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>Q</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
                <value>
                    <fullName>W</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>Z</fullName>
                </value>
                <value>
                    <fullName>Z+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_L_July_Color__c</fullName>
        <label>I.L. July Color</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>I_L_July__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>DARK BLUE                                                       </fullName>
                </value>
                <value>
                    <fullName>LIGHT BLUE               </fullName>
                </value>
                <value>
                    <fullName>GREEN                                   </fullName>
                </value>
                <value>
                    <fullName>LIGHT GREEN              </fullName>
                </value>
                <value>
                    <fullName>YELLOW                     </fullName>
                </value>
                <value>
                    <fullName>PINK                               </fullName>
                </value>
                <value>
                    <fullName>ORANGE                        </fullName>
                </value>
                <value>
                    <fullName>RED                         </fullName>
                </value>
                <value>
                    <fullName>PURPLE             </fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_L_July_Value__c</fullName>
        <formula>CASE( 
TEXT( I_L_July__c ), 
&quot;BR&quot;,1, 
&quot;A&quot;, 2, 
&quot;B&quot;, 3, 
&quot;C&quot;, 4, 
&quot;D&quot;, 5, 
&quot;E&quot;, 6, 
&quot;F&quot;, 7, 
&quot;G&quot;, 8, 
&quot;H&quot;, 9, 
&quot;I&quot;,10, 
&quot;J&quot;,11, 
&quot;K&quot;,12, 
&quot;L&quot;,13, 
&quot;M&quot;,14, 
&quot;N&quot;,15, 
&quot;O&quot;,16, 
&quot;P&quot;,17, 
&quot;Q&quot;,18, 
&quot;R&quot;,19, 
&quot;S&quot;,20, 
&quot;T&quot;,21, 
&quot;U&quot;,22, 
&quot;V&quot;,23, 
&quot;W&quot;,24, 
&quot;X&quot;,25, 
&quot;Y&quot;,26, 
&quot;Z&quot;,27, 
&quot;Z+&quot;,28, 
null 
)</formula>
        <label>I.L. July Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>I_L_July__c</fullName>
        <label>I.L. July</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BR</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>J</fullName>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>Q</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
                <value>
                    <fullName>W</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>Z</fullName>
                </value>
                <value>
                    <fullName>Z+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_L_June_Color__c</fullName>
        <label>I.L. June Color</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>I_L_June__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>DARK BLUE                                                       </fullName>
                </value>
                <value>
                    <fullName>LIGHT BLUE               </fullName>
                </value>
                <value>
                    <fullName>GREEN                                   </fullName>
                </value>
                <value>
                    <fullName>LIGHT GREEN              </fullName>
                </value>
                <value>
                    <fullName>YELLOW                     </fullName>
                </value>
                <value>
                    <fullName>PINK                               </fullName>
                </value>
                <value>
                    <fullName>ORANGE                        </fullName>
                </value>
                <value>
                    <fullName>RED                         </fullName>
                </value>
                <value>
                    <fullName>PURPLE             </fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_L_June_Value__c</fullName>
        <formula>CASE( 
TEXT( I_L_June__c ), 
&quot;BR&quot;,1, 
&quot;A&quot;, 2, 
&quot;B&quot;, 3, 
&quot;C&quot;, 4, 
&quot;D&quot;, 5, 
&quot;E&quot;, 6, 
&quot;F&quot;, 7, 
&quot;G&quot;, 8, 
&quot;H&quot;, 9, 
&quot;I&quot;,10, 
&quot;J&quot;,11, 
&quot;K&quot;,12, 
&quot;L&quot;,13, 
&quot;M&quot;,14, 
&quot;N&quot;,15, 
&quot;O&quot;,16, 
&quot;P&quot;,17, 
&quot;Q&quot;,18, 
&quot;R&quot;,19, 
&quot;S&quot;,20, 
&quot;T&quot;,21, 
&quot;U&quot;,22, 
&quot;V&quot;,23, 
&quot;W&quot;,24, 
&quot;X&quot;,25, 
&quot;Y&quot;,26, 
&quot;Z&quot;,27, 
&quot;Z+&quot;,28, 
null 
)</formula>
        <label>I.L. June Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>I_L_June__c</fullName>
        <label>I.L. June</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BR</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>J</fullName>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>Q</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
                <value>
                    <fullName>W</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>Z</fullName>
                </value>
                <value>
                    <fullName>Z+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_L_May_Color__c</fullName>
        <label>I.L. May Color</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DARK BLUE</fullName>
                </value>
                <value>
                    <fullName>LIGHT BLUE</fullName>
                </value>
                <value>
                    <fullName>GREEN</fullName>
                </value>
                <value>
                    <fullName>LIGHT GREEN</fullName>
                </value>
                <value>
                    <fullName>YELLOW</fullName>
                </value>
                <value>
                    <fullName>PINK</fullName>
                </value>
                <value>
                    <fullName>ORANGE</fullName>
                </value>
                <value>
                    <fullName>RED</fullName>
                </value>
                <value>
                    <fullName>PURPLE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_L_May_Value__c</fullName>
        <formula>CASE( 
TEXT( I_L_May__c ), 
&quot;BR&quot;,1, 
&quot;A&quot;, 2, 
&quot;B&quot;, 3, 
&quot;C&quot;, 4, 
&quot;D&quot;, 5, 
&quot;E&quot;, 6, 
&quot;F&quot;, 7, 
&quot;G&quot;, 8, 
&quot;H&quot;, 9, 
&quot;I&quot;,10, 
&quot;J&quot;,11, 
&quot;K&quot;,12, 
&quot;L&quot;,13, 
&quot;M&quot;,14, 
&quot;N&quot;,15, 
&quot;O&quot;,16, 
&quot;P&quot;,17, 
&quot;Q&quot;,18, 
&quot;R&quot;,19, 
&quot;S&quot;,20, 
&quot;T&quot;,21, 
&quot;U&quot;,22, 
&quot;V&quot;,23, 
&quot;W&quot;,24, 
&quot;X&quot;,25, 
&quot;Y&quot;,26, 
&quot;Z&quot;,27, 
&quot;Z+&quot;,28, 
null 
)</formula>
        <label>I.L. May Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>I_L_May__c</fullName>
        <label>I.L. May</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BR</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>J</fullName>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>Q</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
                <value>
                    <fullName>W</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>Z</fullName>
                </value>
                <value>
                    <fullName>Z+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intern_Position__c</fullName>
        <label>Intern Position</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General Program Intern</fullName>
                </value>
                <value>
                    <fullName>House Pastor</fullName>
                </value>
                <value>
                    <fullName>Program Quality Coach</fullName>
                </value>
                <value>
                    <fullName>Reading Coordinator</fullName>
                </value>
                <value>
                    <fullName>Reading Curriculum Coordinator</fullName>
                </value>
                <value>
                    <fullName>Reading Volunteer Coordinator</fullName>
                </value>
                <value>
                    <fullName>Summer Site Coordinator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jan_Days_Attended__c</fullName>
        <label>Jan Days Attended</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>July_Value_June_Value__c</fullName>
        <formula>I_L_July_Value__c -  I_L_June_Value__c</formula>
        <label>July Value - June Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Literacy_Nimbus_Enrollment_Exist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by flow to prevent duplicate enrollments for Lit_Enrollments.</description>
        <inlineHelpText>Used by flow to prevent duplicate enrollments for Lit_Enrollments.Do not Change</inlineHelpText>
        <label>Literacy Nimbus Enrollment Exist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mar_Days_Attended__c</fullName>
        <label>Mar Days Attended</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May_Days_Attended__c</fullName>
        <label>May Days Attended</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May_Value_Aug_Value__c</fullName>
        <formula>I_L_May_Value__c -  I_L_Aug_Value__c</formula>
        <label>May Value - Aug Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May_Value_Dec_Value__c</fullName>
        <formula>I_L_May_Value__c -  I_L_Dec_Value__c</formula>
        <label>May Value - Dec Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Words_Learned__c</fullName>
        <label>New Words Learned</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nov_Days_Attended__c</fullName>
        <label>Nov Days Attended</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oct_Days_Attended__c</fullName>
        <label>Oct Days Attended</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pages_Read__c</fullName>
        <label>Pages Read</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Participant_ID18__c</fullName>
        <formula>Participant_Intern__r.ContactID18__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Participant ID18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_Intern__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participant/Intern</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Participant/Intern Records</relationshipLabel>
        <relationshipName>Participant_Intern_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_AFT_Total_Days__c</fullName>
        <formula>Program__r.Program_Days_AFT_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program AFT Total Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program_Days_AFT_1st_Sem__c</fullName>
        <formula>Program__r.Program_Days_AFT_1st_Sem__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Days AFT 1st Sem</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>